// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedBar renders a single bar when benchmark value is less than current value 1`] = `
<React.Fragment>
  <ChartContext
    DropdownContext={[Function]}
    TooltipContext={[Function]}
    color="giant-leap"
    data={Array []}
    label="Possitve"
    onDropdownClose={[Function]}
    onDropdownOpen={[Function]}
    value={4321}
  >
    <Bar
      color="giant-leap"
      direction="right"
      fillMode="solid"
      isFaded={false}
      isHidden={false}
      labelStrong={false}
      minSize="1rem"
      onClick={[Function]}
      percent={50}
    />
  </ChartContext>
</React.Fragment>
`;

exports[`CombinedBar renders an additional striped bar when benchmark value is grather than current value 1`] = `
<React.Fragment>
  <ChartContext
    DropdownContext={[Function]}
    TooltipContext={[Function]}
    color="giant-leap"
    data={Array []}
    label="Possitve"
    onDropdownClose={[Function]}
    onDropdownOpen={[Function]}
    value={4321}
  >
    <Bar
      color="giant-leap"
      direction="right"
      fillMode="solid"
      isFaded={false}
      isHidden={false}
      labelStrong={false}
      minSize="1rem"
      onClick={[Function]}
      percent={10}
    />
  </ChartContext>
  <div
    className="ax-bar-chart__combined-bar-diff"
    style={
      Object {
        "left": "10%",
      }
    }
  >
    <ChartContext
      TooltipContext={[Function]}
      color="giant-leap"
      data={Array []}
      label="Possitve"
      value={-4271}
    >
      <Bar
        color="giant-leap"
        direction="right"
        fillMode="striped"
        isFaded={false}
        isHidden={false}
        labelStrong={false}
        minSize="1rem"
        percent={40}
      />
    </ChartContext>
  </div>
</React.Fragment>
`;
